fixed some spacing and added the nginx conf file

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,7 @@ h1 {
   min-width: 18.75em;
   max-width: 75em;
   margin: auto;
+  padding-bottom: 2em;
 }
 
 .background-fader {
